[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "linlog-py"
version = "0.2.0"
description = "Simple Python logging utilities with custom formatters, daily rotation, and request ID tracking"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "KuanLin", email = "isu10122068a@gmail.com"}
]
keywords = ["logging", "request-id", "rotation", "formatter", "tracking"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Logging",
]

# Zero dependencies - uses only Python standard library
dependencies = []

# Optional dev dependencies
[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]
django = ["django>=3.2"]
# FastAPI integration uses the pure ASGI protocol, so it has no hard
# dependency — listed here for discoverability / future extras.
fastapi = []

# Tell setuptools where to find packages
[tool.setuptools.packages.find]
where = ["src"]
